applications/web-system/datasette/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datasette
  namespace: web-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "datasette.happylittlecloud.ca"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: datasette
            port:
              number: 80
